fix(Snippets): overflow of title added

--- a/src/style.less
+++ b/src/style.less
@@ -43,6 +43,15 @@
     &.ng-leave {
       animation: fadeOut @fadeOutSpeed;
     }
+
+    label {
+      width: 80%;
+      margin: 0;
+
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
 }
 
